--- a/pig-config/src/main/resources/bootstrap.yml
+++ b/pig-config/src/main/resources/bootstrap.yml
@@ -10,8 +10,10 @@ spring:
     config:
       server:
         git:
-          uri: https://gitee.com/cqzqxq_lxh/pig-config.git
-          default-label: ${spring.profiles.active}   #解决监控down
+          #uri: https://gitee.com/cqzqxq_lxh/pig-config.git
+          uri: https://github.com/xy-jack/config-server/
+          search-paths: pig-config
+          default-label: ${spring.profiles.active}      #${spring.profiles.active}   #解决监控down
 
 # 关闭安全管理
 management:
@@ -24,10 +26,10 @@ endpoints:
 spring:
   profiles: dev
   rabbitmq:
-    host: 139.224.200.249
-    port: 5682
-    username: pig
-    password: lengleng
+    host: localhost
+    port: 5672
+    #username: pig
+    #password: lengleng
 eureka:
   instance:
     prefer-ip-address: true
@@ -38,23 +40,23 @@ eureka:
       defaultZone: http://pig:gip6666@localhost:1025/eureka
     registry-fetch-interval-seconds: 10
 ---
-spring:
-  profiles: prd
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5682
-    username: pig
-    password: lengleng
-  cloud:
-    config:
-      retry:
-        initial-interval: 3000
-        multiplier: 1.5
-        max-interval: 20000
-        max-attempts: 6
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    serviceUrl:
-      defaultZone: http://pig:gip6666@eureka:1025/eureka
+#spring:
+#  profiles: prd
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    #username: pig
+#    #password: lengleng
+#  cloud:
+#    config:
+#      retry:
+#        initial-interval: 3000
+#        multiplier: 1.5
+#        max-interval: 20000
+#        max-attempts: 6
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    serviceUrl:
+#      defaultZone: http://pig:gip6666@eureka:1025/eureka
