--- a/pig-auth/src/main/resources/bootstrap.yml
+++ b/pig-auth/src/main/resources/bootstrap.yml
@@ -10,7 +10,9 @@ spring:
         service-id: pig-config-server
         enabled: true
       profile: ${spring.profiles.active}
-      label: ${spring.profiles.active}
+      label: master
+
+
 ---
 spring:
   profiles: dev
@@ -21,8 +23,10 @@ eureka:
     lease-expiration-duration-in-seconds: 20
   client:
     serviceUrl:
-      defaultZone: http://pig:gip6666@localhost:1025/eureka
+      defaultZone: http://admin:admin@localhost:1025/eureka
     registry-fetch-interval-seconds: 10
+
+
 
 ---
 spring:
