--- a/pig-eureka/src/main/resources/bootstrap.yml
+++ b/pig-eureka/src/main/resources/bootstrap.yml
@@ -7,19 +7,21 @@ spring:
 
 security:
   basic:
-    enabled: true # 启用身份认证
+    enabled: true         # 启用身份认证
   user:
-    name: pig # 定义用户名
-    password: gip6666 # 定义密码
+    name: admin           # 定义用户名
+    password: admin       # 定义密码
 
 eureka:
-  client:
-    fetch-registry: false
-    register-with-eureka: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   instance:
-    hostname: localhost
+    hostname: localhost    #实列名称
+    #prefer-ip-address: true          #显示自身IP
+  client:
+    fetch-registry: false         # 是否从Eureka中获取注册信息，默认为true
+    register-with-eureka: false   # 是否将eureka自身作为应用注册到eureka注册中心,在默认设置下，该服务注册中心也会将自己作为客户端来尝试注册它自己，所以我们需要禁用它的客户端注册行为
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/        #Eureka客户端与Eureka服务端进行交互的地址
+
   server:  #配置属性，但由于 Eureka 自我保护模式以及心跳周期长的原因，经常会遇到 Eureka Server 不剔除已关停的节点的问题
     enable-self-preservation: false
     eviction-interval-timer-in-ms: 5000
