--- a/pig-modules/pig-upms-service/src/main/resources/bootstrap.yml
+++ b/pig-modules/pig-upms-service/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
         service-id: pig-config-server
         enabled: true
       profile: ${spring.profiles.active}
-      label: ${spring.profiles.active}
+      label: master
 
 ---
 spring:
@@ -18,11 +18,11 @@ spring:
 eureka:
   instance:
     prefer-ip-address: true
-    lease-renewal-interval-in-seconds: 5
+    lease-renewal00-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 20
   client:
     serviceUrl:
-      defaultZone: http://pig:gip6666@localhost:1025/eureka
+      defaultZone: http://admin:admin@localhost:1025/eureka
     registry-fetch-interval-seconds: 10
 
 ---
@@ -33,4 +33,4 @@ eureka:
     prefer-ip-address: true
   client:
     serviceUrl:
-      defaultZone: http://pig:gip6666@eureka:1025/eureka
+      defaultZone: http://admin:admin@eureka:1025/eureka
